--- a/static/debug/blockchain/index.html
+++ b/static/debug/blockchain/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/debug/blockchain.css">
+    <link rel="stylesheet" type="text/css" href="/debug/blockchain/blockchain.css">
     <title>debug/blockchain</title>
   </head>
   <body>
@@ -20,6 +20,6 @@
       <tr><td class="field">difficulty</td><td class="block-difficulty"><!-- --></td></tr>
       <tr><td colspan="2" class="block-data"></td></tr>
     </table>
-    <script src="/debug/blockchain.js"></script>
+    <script src="/debug/blockchain/blockchain.js"></script>
   </body>
 </html>
