Move XHR to its own file

--- a/static/debug/blockchain/index.html
+++ b/static/debug/blockchain/index.html
@@ -20,6 +20,7 @@
       <tr><td class="field">difficulty</td><td class="block-difficulty"><!-- --></td></tr>
       <tr><td colspan="2" class="block-data"></td></tr>
     </table>
+    <script src="/debug/xhr.js"></script>
     <script src="/debug/blockchain/blockchain.js"></script>
   </body>
 </html>
